--- a/index.css
+++ b/index.css
@@ -49,3 +49,13 @@
   margin-left: 5%;
   margin-top: 5%;
 }
+
+#button-start{
+  background-color: #FFAF04;
+  padding-left: 2%;
+  padding-rigth: 2%;
+  padding-bottom: 0.6%;
+  padding-top: 0.6%;
+  border: none;
+  boder-radius: 8em;
+}
